JumpScript/tests/baselines/reference/amdDependencyCommentName1.errors.txt
tests/cases/compiler/amdDependencyCommentName1.jump(3,21): error TS2307: Cannot find module 'm2'.


==== tests/cases/compiler/amdDependencyCommentName1.jump (1 errors) ====
    ///<amd-dependency path='bar' name='b'/>
    
    import m1 = require("m2")
                        ~~~~
!!! error TS2307: Cannot find module 'm2'.
    m1.f();